Fixed bug in code (fixed H is a card containig a bullet point title and an image, the image doesnot have a white line in its bottom, but it generates it when container h is fit-content. Height has been set to fisxed and z-index to -1 to hide this bug).

--- a/style.css
+++ b/style.css
@@ -400,6 +400,11 @@ text {
   gap: 0.8rem 0;
 }
 
+#fixed-h {
+  height: 289px;
+  z-index: -1;
+}
+
 /* ARTICLE 5 __ BANNER */
 /*=============================================================================*/
 .inst-bnnr {
